Add global API error handling and externalize JWT JWK URI.
Introduce ErrorCode enum, ApiError responses, and security filter handlers for consistent JSON errors. Externalize jwk-set-uri via NSA2_JWT_JWK_SET_URI and fix unchecked JWT role casts.

Co-authored-by: Cursor <cursoragent@cursor.com>